client/src/QuestionsAndAnswers/style.scss
/*****************************/
/*Questions and Answers*/
/*****************************/

//Main

.qa-main-container {
  padding-left: 50px;
}

//Answer List Entry

.qa-answer-body {
  font-size: 12;
  font-weight: normal;
}

.qa-answer-entry {
  display: block;
  width: 60vw;
  height: auto;

  font-size: 9;
  font-weight: lighter;
}

#qa-answerlist-title {
  font-weight: bold;
}

//Most Helpful
.qa-mosthelpful-footer {
  display: block;
  font-size: small;
  padding-top: 10px;
  padding-left: 22px;
  padding-bottom: 10px;
}

.qa-helpful-body {
  display: block;
  font-size: medium;
  padding-left: none;
}

.qa-answer-body {
  padding-left: 22px;
}

.qa-answer-footer {
  display: block;
  font-size: small;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 22px;
}

//Qustion And Answer

.qa-qna-title {
  font-size: 15;
  font-weight: bold;
  display: block;
}

//Question List

.qa-questionList-container {
  display: block;
  height: 60vh;
  width: 60vw;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

.qa-al-load-more-button {
  font-size: small;
  text-decoration: none;
}

//Question List Entry

.qa-question-links .qa-question-side-links {
  font-size: 11;
  font-weight: normal;
  padding-right: 20px;
  float: right;
}

.qa-question-text-only {
  font-size: 11;
  font-weight: normal;
  padding-right: 20px;
}

.qa-question-searched {
  color: red;
}

.qa-question-side-links span {
  font-size: 11;
  color: green;
  font-weight: normal;
  padding-right: 20px;
  float: right;
}

//SearchBar

.qa-submit-form {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
}

.qa-griditem1 {
  grid-column-start: 1;
  grid-column-end: 6;
}

.qa-griditem2 {
  grid-column-start: 6;
  grid-column-end: 7;
}

.qa-searchbar {
  height: 35px;
  border-width: thick;
  border-right: none;
  border-top-color: rgb(187, 178, 178);
  border-bottom-color: rgb(91, 84, 84);
  border-left-color: rgb(239, 244, 239);
}

.qa-searchbar-mag {
  background: white url(https://developer.mozilla.org/static/media/search.db31d27c.svg) 0 0
    no-repeat;
  width: 3vw;
  height: 35px;
  border-left: none;
  border-width: thick;
  border-top-color: rgb(187, 178, 178);
  border-bottom-color: rgb(91, 84, 84);
  border-right-color: rgb(239, 244, 239);
}

.qa-search-exactMatch {
  color: red;
}

// .qa-searchbar-container {
//   display: block;
//   padding-bottom: 5px;
//   padding-top: 5px;
// }

mark {
  background-color: white;
  color: red;
}

